--- a/app.html
+++ b/app.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="/styles/app.css"/>
-    <link rel = "preconnect" href = "https://fonts.googleapis.com"/>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/app.css">
+    <link rel = "preconnect" href = "https://fonts.googleapis.com">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Poppins: wght @ 400; 500; 700 & display = swap "rel =" stylesheet ">
     <title>Poke App</title>
@@ -21,53 +21,53 @@
                 <p>Grama</p>
                 <br>
                 <p>Venenoso</p>
-                <img class='foto'src="/img/Bulbasaur.gif">
+                <img class='foto'src="img/Bulbasaur.gif">
             </div>
             <div class="container2">
                 <h4>Ivysaur</h4>
                 <p>Grama</p>
                 <br>
                 <p>Venenoso</p>
-                <img class='foto'src="/img/Ivysaur.gif">
+                <img class='foto'src="img/Ivysaur.gif">
             </div>
             <div class="container3">
                 <h4>Venusaur</h4>
                 <p>Grama</p>
                 <br>
                 <p>Venenoso</p>
-                <img class='foto'src="/img/Venusaur.gif">
+                <img class='foto'src="img/Venusaur.gif">
             </div>
             <div class="container4">
                 <h4>Charmander</h4>
                 <p>Fogo</p>
-                <img class='foto'src="/img/Charmander.gif">
+                <img class='foto'src="img/Charmander.gif">
             </div>
             <div class="container5">
                 <h4>Charmeleon</h4>
                 <p>Fogo</p>
-                <img class='foto'src="/img/Charmeleon.gif">
+                <img class='foto'src="img/Charmeleon.gif">
             </div>
             <div class="container6">
                 <h4>Charizard</h4>
                 <p>Fogo</p>
                 <br>
                 <p>Voador</p>
-                <img class='foto'src="/img/Charizard.gif">
+                <img class='foto'src="img/Charizard.gif">
             </div>
             <div class="container7">
                 <h4>Squirtle</h4>
                 <p>Água</p>
-                <img class='foto'src="/img/Squirtle.gif">
+                <img class='foto'src="img/Squirtle.gif">
             </div>
             <div class="container8">
                 <h4>Wartortle</h4>
                 <p>Água</p>
-                <img class='foto'src="/img/Wartortle.gif">
+                <img class='foto'src="img/Wartortle.gif">
             </div>
             <div class="container9">
                 <h4>Blastoise</h4>
                 <p>Água</p>
-                <img class='foto'src="/img/Blastoise.gif">
+                <img class='foto'src="img/Blastoise.gif">
             </div>
             <div class="container10">
                 <h4>Pikachu</h4>
