--- a/app.html
+++ b/app.html
@@ -72,7 +72,7 @@
             <div class="container10">
                 <h4>Pikachu</h4>
                 <p>Elétrico</p>
-                <img class='foto'src="/img/Pikachu.gif">
+                <img class='foto'src="img/Pikachu.gif">
             </div>
         </div>
     </div>
