--- a/app.html
+++ b/app.html
@@ -34,6 +34,10 @@
 
     <script src="script/fenchPoke.js"></script>
     <script src="script/animation.js"></script>
+
+    <audio id="player" autoplay>
+        <source src="audio/pikachu.mp3" type="audio/mp3">
+    </audio>
     
 </body>
 </html>
