Animação Load adicionado - Script Load melhorado - Sintaxe HTML corrigido

--- a/app.html
+++ b/app.html
@@ -13,15 +13,13 @@
 <body>
 
     <!-- DIV DE CARREGAMENTO -->
-    <div id="div-load">
-        <img id="img-load1" src="img/loading-gifs/pikachuDormindo.gif"/>
-        <img id="img-load2" src="img/loading-gifs/pikachu.gif"/>
-    </div>
+    <div id="div-load"><img id="img-load" src="img/loading-gifs/pikachuDormindo.gif"/></div>
 
-    <div class="content">
+     <!--CORPO - SECTION-->
+    <section class="content">
+
         <h2>Pokedex</h2>
         
-
         <div class="containers">
             <div class="container1">
                 <h4>Bulbassaur</h4>
@@ -30,8 +28,11 @@
                 <p>Venenoso</p>
                 <img class='foto'src="img/loading-gifs/Bulbasaur.gif">
             </div>
+        </div>
             
+    </section>
 
+    <!--SCRIPT TAG-->
     <script src="script/fenchPoke.js"></script>
     <script src="script/animation.js"></script>
 
