Teste de comunicação entre frenchPoke.js e engine.jsjs

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         
         <div class="containers">
             <div class="container1">
-                <h4>Bulbassaur</h4>
-                <p>Grama</p>
+                <h4 id="pokeName"></h4>
+                <p id="pokeType">elétrico</p>
                 <br>
                 <p>Venenoso</p>
-                <img class='foto'src="img/loading-gifs/Bulbasaur.gif">
+                <img class='foto'id="foto" src="img/loading-gifs/Bulbasaur.gif">
             </div>
         </div>
             
@@ -35,6 +35,7 @@
     <!--SCRIPT TAG-->
     <script src="script/fenchPoke.js"></script>
     <script src="script/animation.js"></script>
+    <script src="script/engine.js"></script>
 
     <audio id="player" autoplay>
         <source src="audio/pikachu.mp3" type="audio/mp3">
