Adicionado funçoes no bar menu.
info.html excluído , animações adicionadas, div info adicionado. modo noturno aprimorado.

--- a/index.html
+++ b/index.html
@@ -40,21 +40,27 @@
     <footer>
         <div class="menu" id='menuapp'>
             <li>
-                <a>
-                    <img src="img/img-icons/lua.svg" alt="noturno">
-                </a>
+                <!--NOTURNO-->
+                <img src="img/img-icons/lua.svg" alt="noturno" onclick="activeMenu(1)"/>
             </li>
             <li>
-                <a href='index.html' src='' class='btn active'>
-                    <img src="img/img-icons/home.svg" alt="home">
-                </a>
+                <!--HOME-->
+                <img src="img/img-icons/home.svg" alt="home" onclick="activeMenu(2)"/>
             </li>
             <li>
-                <a href='info.html' class='btn'>
-                    <img src="img/img-icons/info.svg" alt="info">
-                </a>
+                <!--INFO-->
+                <img src="img/img-icons/info.svg" alt="info" onclick="activeMenu(3)"/>
             </li>
         </div>
+
+        <!--INFO DIV ALFA-->
+        <div class="info" id="info">
+
+            <!--CONTEUDO INFO-->
+            <h3>Ryan e Samuel</h3>
+
+        </div>
+
     </footer>
 
     <!--SCRIPT TAG-->
