Bug Scroll Y corrigido , motor aprimorado, imagens buscadas em pokeApi
Antes do load era possivel deslizar a tela no eixo Y , agora app.css bloqueia esta ação e animation.js libera esta ação depois do load. Motor agora cria todos os pokemons em um container , a reponsividade voltou ao normal. O motor agora tira 1 <p> quando o pokemon apenas tem 1 tipo , e coloca 15px de margin top nas imagens para centraliza-las. O motor agora esta buscando as imagens na pokeApi para os containers.

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -25,7 +25,7 @@
     
      <!--Tronco-->
         <nav id="nav">
-            <div class="containers">
+            <div class="containers" id="containers">
                 <div class="container">
                     <h4>Pikachu</h4>
                     <p>Elétrico</p>
