Motor aprimorado,  numero de pokemon adicionado.

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -26,13 +26,14 @@
      <!--Tronco-->
         <nav id="nav">
             <div class="containers" id="containers">
-                <div class="container">
+                <!--div class="container">
                     <h4>Pikachu</h4>
-                    <p>Elétrico</p>
+                    <p class="number">#001</p>
+                    <p class="pp">Elétrico</p>
                     <br>
-                    <p>Venenoso</p>
+                    <p class="pp">Venenoso</p>
                     <img class='foto'id="foto" src="img/loading-gifs/Bulbasaur.gif">
-                </div>
+                </div-->
             </div>
         </nav>
     
