--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -26,8 +26,8 @@
      <!--Tronco-->
         <nav id="nav">
             <div class="containers" id="containers">
-                <!--div class="container">
-                    <h4>Pikachu</h4>
+                <div class="container">
+                    <!--<h4>Pikachu</h4>
                     <p class="number">#001</p>
                     <p class="pp">Elétrico</p>
                     <br>
@@ -69,7 +69,7 @@
                     <h3>Autores</h3>
                     <h1>Ryan-drop</h1><a href="https://github.com/Ryan-drop" target="_blank"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" target="_blank"></a>
                     <h1>samuelllr</h1><a href="https://github.com/samuelllr" target="_blank"><img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" target="_blank"></a>
-                
+                <p>O app tem a seguinte funcionalidade, funcionar como uma pokedex, possui os 151 pokemons da primeira geração, e com um clique acima deles é possivel obter algumas informações sobre o mesmo.</p>
             </div>
 
         </footer>
