Id do poke ajustes

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -27,8 +27,8 @@
         <nav id="nav">
             <div class="containers" id="containers">
                 <div class="container">
-                    <!--<h4>Pikachu</h4>
-                    <p class="number">#001</p>
+                    <h4>Pikachu</h4>
+                    <p class="number">#002</p>
                     <p class="pp">Elétrico</p>
                     <br>
                     <p class="pp">Venenoso</p>
