Layout do container pronto
Adicionei uma nova fonte para o id# e o tipo do poke. Ajustei todo layout do container

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="styles/app.css">
     <link rel = "preconnect" href = "https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
 <link rel = "preconnect" href = "https://fonts.gstatic.com" crossorigin>
 <link href = "https: //fonts.googleapis.com/css2? family = Poppins: wght @ 400; 500; 700 & display = swap "rel =" stylesheet ">
     <title>Poke App</title>
@@ -26,7 +29,7 @@
      <!--Tronco-->
         <nav id="nav">
             <div class="containers" id="containers">
-                <div class="container">
+                <!--<div class="container">
                     <h4>Pikachu</h4>
                     <p class="number">#002</p>
                     <p class="pp">Elétrico</p>
