--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -75,6 +75,17 @@
                 <p>O app tem a seguinte funcionalidade, funcionar como uma pokedex, possui os 151 pokemons da primeira geração, e com um clique acima deles é possivel obter algumas informações sobre o mesmo.</p>
             </div>
 
+                <div class="pokeinfo" id='pokeinfo'>
+                    <div class="containers" id="containers">
+                        <div class="principal">
+                            <h4>Bulbassaur</h4>
+                            <div class="secundaria">
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
         </footer>
 
         <!--SCRIPT TAG-->
