--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -29,14 +29,14 @@
      <!--Tronco-->
         <nav id="nav">
             <div class="containers" id="containers">
-                <div class="container" ontouchstart="pokeinfoF()">
+                <!--div class="container" ontouchstart="pokeinfoF()">
                     <h4>Pikachu</h4>
                     <p class="number">#002</p>
                     <p class="pp">Elétrico</p>
                     <br>
                     <p class="pp">Venenoso</p>
                     <img class='foto'id="foto" src="img/loading-gifs/Bulbasaur.gif">
-                </div>
+                </div-->
             </div>
         </nav>
     
