--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -79,6 +79,11 @@
                     <div class="containers" id="containers">
                         <div class="principal">
                             <h4>Bulbassaur</h4>
+                            <br>
+                            <span class="pp">Grass</span>
+                            <span class="pp">Poison</span>
+                            <span class="number">#001</span>
+
                             <div class="secundaria">
 
                             </div>
