--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -83,9 +83,11 @@
                             <span class="pp">Grass</span>
                             <span class="pp">Poison</span>
                             <span class="number">#001</span>
-
                             <div class="secundaria">
-
+                                <div class='nav-list'>
+                                    <a href='sobre'>Sobre</a>
+                                    <a href='status'>Status</a>
+                                </div>
                             </div>
                         </div>
                     </div>
