--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -85,8 +85,31 @@
                             <span class="number">#001</span>
                             <div class="secundaria">
                                 <div class='nav-list'>
-                                    <a href='sobre'>Sobre</a>
-                                    <a href='status'>Status</a>
+                                    <a href='#sobre'>Sobre</a>
+                                    <a href='#status'>Status</a>
+                                </div>
+                                <div class='line'></div>
+                                <div class='tg' id='sobre'>
+                                    Altura<span>0,4m</span>
+                                    <br>
+                                    Peso<span>4Kg</span>
+                                    <br>
+                                    Tipo<span>Psiquico</span>
+                                    <br>
+                                    Habilidades<span>Syncronize</span>
+                                </div>
+                                <div class="tg" id='status'>
+                                    Hp</span><span>80</span>
+                                    <br>
+                                    Atk<span>90</span>
+                                    <br>
+                                    Special atk<span>99</span>
+                                    <br>
+                                    Def<span>40</span>
+                                    <br>
+                                    Special def<span>60</span>
+                                    <br>
+                                    Speed<span>77</span>
                                 </div>
                             </div>
                         </div>
