--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -78,6 +78,7 @@
                 <div class="pokeinfo" id='pokeinfo'>
                     <div class="containers" id="containers">
                         <div class="principal">
+                            <img src='/MainFiles/img/loading-gifs/black-white.gif' alt='poke'>
                             <h4>Bulbassaur</h4>
                             <br>
                             <span class="pp">Grass</span>
@@ -96,18 +97,20 @@
                                     <br>
                                     Tipo<span>Psiquico</span>
                                     <br>
-                                    Habilidades<span>Syncronize</span>
+                                    Hab. 01<span>Syncronize</span>
+                                    <br>
+                                    Hab. 02<span>Grow</span>
                                 </div>
                                 <div class="tg" id='status'>
                                     Hp</span><span>80</span>
                                     <br>
                                     Atk<span>90</span>
                                     <br>
-                                    Special atk<span>99</span>
+                                    Over atk<span>99</span>
                                     <br>
                                     Def<span>40</span>
                                     <br>
-                                    Special def<span>60</span>
+                                    Over def<span>60</span>
                                     <br>
                                     Speed<span>77</span>
                                 </div>
