--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -102,17 +102,17 @@
                                     Hab. 02<span>Grow</span>
                                 </div>
                                 <div class="tg" id='status'>
-                                    Hp</span><span>80</span>
+                                    Hp<span class="progress-bar1">80</span>
                                     <br>
-                                    Atk<span>90</span>
+                                    Atk<span class="progress-bar2">90</span>
                                     <br>
-                                    Over atk<span>99</span>
+                                    Over atk<span class="progress-bar3">10</span>
                                     <br>
-                                    Def<span>40</span>
+                                    Def<span class="progress-bar4">40</span>
                                     <br>
-                                    Over def<span>60</span>
+                                    Over def<span class="progress-bar5">60</span>
                                     <br>
-                                    Speed<span>77</span>
+                                    Speed<span class="progress-bar6">77</span>
                                 </div>
                             </div>
                         </div>
