Canvas Particles adicionado , melhoria de designer , bug corrigido

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -78,6 +78,10 @@
                 <div class="pokeinfo" id='pokeinfo'>
                     <div class="containers" id="containers">
                         <div class="principal">
+
+                            <!--CANVAS-->
+                            <div class="canvas" id="particles-js"></div>
+
                             <img src='/MainFiles/img/loading-gifs/black-white.gif' alt='poke'>
                             <h4>Bulbassaur</h4>
                             <br>
@@ -86,8 +90,8 @@
                             <span class="number">#001</span>
                             <div class="secundaria">
                                 <div class='nav-list'>
-                                    <a href='#sobre'>Sobre</a>
-                                    <a href='#status'>Status</a>
+                                    <a href='#sobre' id="sobre">Sobre</a>
+                                    <a href='#status' id="stats">Status</a>
                                 </div>
                                 <div class='line'></div>
                                 <div class='tg' id='sobre'>
@@ -122,6 +126,7 @@
         </footer>
 
         <!--SCRIPT TAG-->
+        <script src="script/particles.min.js"></script>
         <script src="script/engine.js"></script>
         <script src="script/data.js"></script>
         <script src="script/animation.js"></script>
