motor aprimorado para mudar dados

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -82,12 +82,12 @@
                             <!--CANVAS-->
                             <div class="canvas" id="particles-js"></div>
 
-                            <img src='/MainFiles/img/loading-gifs/black-white.gif' alt='poke'>
-                            <h4>Bulbassaur</h4>
+                            <img src="img/loading-gifs/black-white.gif" alt='poke'>
+                            <h4 id="namePokeInfo"></h4>
                             <br>
-                            <span class="pp">Grass</span>
-                            <span class="pp">Poison</span>
-                            <span class="number">#001</span>
+                            <span class="pp" id="typePokeinfo1"></span>
+                            <span class="pp" id="typePokeinfo2"></span>
+                            <span class="number" id="numberPoke"></span>
                             <div class="secundaria">
                                 <div class='nav-list'>
                                     <a href='#sobre' id="sobre">Sobre</a>
@@ -95,9 +95,9 @@
                                 </div>
                                 <div class='line'></div>
                                 <div class='tg' id='sobre'>
-                                    Altura<span>0,4m</span>
+                                    Altura<span id="alturaPoke">0,4m</span>
                                     <br>
-                                    Peso<span>4Kg</span>
+                                    Peso<span id="pesoPoke">4Kg</span>
                                     <br>
                                     Tipo<span>Psiquico</span>
                                     <br>
@@ -106,17 +106,17 @@
                                     Hab. 02<span>Grow</span>
                                 </div>
                                 <div class="tg" id='status'>
-                                    Hp<span class="progress-bar1">80</span>
+                                    Hp<span class="progress-bar1" id="barHP"></span>
                                     <br>
-                                    Atk<span class="progress-bar2">90</span>
+                                    Atk<span class="progress-bar2" id="barAtk"></span>
                                     <br>
-                                    Over atk<span class="progress-bar3">10</span>
+                                    Over atk<span class="progress-bar3" id="barEspAtk"></span>
                                     <br>
-                                    Def<span class="progress-bar4">40</span>
+                                    Def<span class="progress-bar4" id="barDef"></span>
                                     <br>
-                                    Over def<span class="progress-bar5">60</span>
+                                    Over def<span class="progress-bar5" id="barEspDef"></span>
                                     <br>
-                                    Speed<span class="progress-bar6">77</span>
+                                    Speed<span class="progress-bar6" id="barSpeed"></span>
                                 </div>
                             </div>
                         </div>
