--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -82,19 +82,19 @@
                             <!--CANVAS-->
                             <div class="canvas" id="particles-js"></div>
 
-                            <img src="img/loading-gifs/black-white.gif" alt='poke'>
+                            <img src="img/loading-gifs/black-white.gif" alt='poke' id="pokebola">
                             <h4 id="namePokeInfo"></h4>
                             <br>
                             <span class="pp" id="typePokeinfo1"></span>
                             <span class="pp" id="typePokeinfo2"></span>
                             <span class="number" id="numberPoke"></span>
                             <div class="secundaria">
-                                <div class='nav-list'>
-                                    <a href='#sobre' id="sobre">Sobre</a>
-                                    <a href='#status' id="stats">Status</a>
+                                <div class="nav-list">
+                                    <a href="#sobre" id="sobree">Sobre</a>
+                                    <a href="#status" id="stats">Status</a>
                                 </div>
-                                <div class='line'></div>
-                                <div class='tg' id='sobre'>
+                                <div class="line"></div>
+                                <div class="tg" id="sobre">
                                     Altura<span id="alturaPoke">0,4m</span>
                                     <br>
                                     Peso<span id="pesoPoke">4Kg</span>
@@ -105,7 +105,7 @@
                                     <br>
                                     Hab. 02<span>Grow</span>
                                 </div>
-                                <div class="tg" id='status'>
+                                <div class="tg" id="status">
                                     Hp<span class="progress-bar1" id="barHP"></span>
                                     <br>
                                     Atk<span class="progress-bar2" id="barAtk"></span>
