mais um bug corrigido no motor

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -95,15 +95,15 @@
                                 </div>
                                 <div class="line"></div>
                                 <div class="tg" id="sobre">
-                                    Altura<span id="alturaPoke">0,4m</span>
+                                    Altura<span id="alturaPoke"></span>
                                     <br>
-                                    Peso<span id="pesoPoke">4Kg</span>
+                                    Peso<span id="pesoPoke"></span>
                                     <br>
-                                    Tipo<span>Psiquico</span>
+                                    Tipo<span id="tipoPoke"></span>
                                     <br>
-                                    Hab. 01<span>Syncronize</span>
+                                    Hab. 01<span id="hab1"></span>
                                     <br>
-                                    Hab. 02<span>Grow</span>
+                                    Hab. 02<span id="hab2"></span>
                                 </div>
                                 <div class="tg" id="status">
                                     Hp<span class="progress-bar1" id="barHP"></span>
