--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -91,6 +91,7 @@
                             <div class="secundaria">
                                 <div class="nav-list">
                                     <a href="#sobre" id="sobree">Sobre</a>
+                                    <span style="display: none;">#sobre</span>
                                     <a href="#status" id="stats">Status</a>
                                 </div>
                                 <div class="line"></div>
