--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -96,11 +96,11 @@
                                 </div>
                                 <div class="line"></div>
                                 <div class="tg" id="sobre">
-                                    Altura<span id="alturaPoke"></span>
+                                    Height<span id="alturaPoke"></span>
                                     <br>
-                                    Peso<span id="pesoPoke"></span>
+                                    Weight<span id="pesoPoke"></span>
                                     <br>
-                                    Tipo<span id="tipoPoke"></span>
+                                    Type<span id="tipoPoke"></span>
                                     <br>
                                     Hab. 01<span id="hab1"></span>
                                     <br>
