--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -19,7 +19,7 @@
     <div id="div-load"><img id="img-load" src="img/loading-gifs/pikachuDormindo.gif"/></div>
 
      <!--CORPO - SECTION-->
-    <input type="checkbox" id='darkmodeToggle'>
+    <input type="checkbox" id='darkmodeToggle' onclick="dark()">
     <main>
     <!--HEADER-->
         <header>
