--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -105,6 +105,8 @@
                                     Hab. 01<span id="hab1"></span>
                                     <br>
                                     Hab. 02<span id="hab2"></span>
+                                    <br>
+                                    Sobre<span id="sobre">Alguma coisa</span>
                                 </div>
                                 <div class="tg" id="status">
                                     Hp<span class="progress-bar1" id="barHP"></span>
