Pokeinfo sobre ajustes

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -106,7 +106,8 @@
                                     <br>
                                     Hab. 02<span id="hab2"></span>
                                     <br>
-                                    Sobre<span id="descricao"></span>
+                                    <div class="line2"></div>
+                                    <p>About</p><span id="descricao"></span>
                                 </div>
                                 <div class="tg" id="status">
                                     Hp<span class="progress-bar1" id="barHP"></span>
