pequenos ajustes e otimização do motor

--- a/MainFiles/index.html
+++ b/MainFiles/index.html
@@ -28,16 +28,7 @@
     
      <!--Tronco-->
         <nav id="nav">
-            <div class="containers" id="containers">
-                <!--div class="container" ontouchstart="pokeinfoF()">
-                    <h4>Pikachu</h4>
-                    <p class="number">#002</p>
-                    <p class="pp">Elétrico</p>
-                    <br>
-                    <p class="pp">Venenoso</p>
-                    <img class='foto'id="foto" src="img/loading-gifs/Bulbasaur.gif">
-                </div-->
-            </div>
+            <div class="containers" id="containers"></div>
         </nav>
     
 
@@ -90,7 +81,7 @@
                             <span class="number" id="numberPoke"></span>
                             <div class="secundaria">
                                 <div class="nav-list">
-                                    <a href="#sobre" id="sobree">Sobre</a>
+                                    <a href="#sobre" id="sobree">About</a>
                                     <span style="display: none;">#sobre</span>
                                     <a href="#status" id="stats">Status</a>
                                 </div>
